--- a/examples/index.html
+++ b/examples/index.html
@@ -7,13 +7,25 @@
     </head>
     <body>
       <div id="application">
-        <span class="label">C# keywords:</span> 
-        <div class="completion" data-bind="click: focusInput()">
-            <!-- ko foreach: completed -->
-                <span data-bind="text: $data"></span>, 
-            <!-- /ko -->
-            <input data-bind="attr: { size: Math.max(1, value().length - 1) }, hasfocus: focused, value: value, valueUpdate: 'afterkeydown', event: { keydown: keyDown }, autocomplete: { data: contacts, onSelect: select }" value=""/>
-        </div>
+          <h2>C# Keywords</h2>
+          <div data-bind="foreach: keywords">
+              <span data-bind="text: $data"></span>
+          </div>
+          <h2>Single Completion</h2>
+          <div data-bind="with: singleComplete">
+              <span class="label">C# keywords:</span>
+              <input data-bind="autocomplete: { data: items }" value=""/>
+          </div>
+          <h2>Multi Completion</h2>
+          <div data-bind="with: multiComplete">
+              <span class="label">C# keywords:</span>
+              <div class="completion" data-bind="click: focusInput()">
+                  <!-- ko foreach: completed -->
+                  <span data-bind="text: $data"></span>,
+                  <!-- /ko -->
+                  <input data-bind="attr: { size: Math.max(1, value().length - 1) }, hasfocus: focused, value: value, valueUpdate: 'afterkeydown', event: { keydown: keyDown }, autocomplete: { data: items, onSelect: select }" value=""/>
+              </div>
+          </div>
       </div>
       <script type="text/javascript" src="../vendor/knockout-2.2.0.debug.js"></script>
       <script type="text/javascript" src="../lib/knockout.autocomplete.js"></script>
