--- a/examples/index.html
+++ b/examples/index.html
@@ -4,6 +4,7 @@
         <title>Autocomplete Demo</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="../lib/knockout.autocomplete.css" type="text/css" media="screen" />
     </head>
     <body>
       <div id="application">
@@ -27,6 +28,7 @@
               </div>
           </div>
       </div>
+      <script type="text/javascript" src="../vendor/jquery-1.8.1.js"></script>
       <script type="text/javascript" src="../vendor/knockout-2.2.0.debug.js"></script>
       <script type="text/javascript" src="../lib/knockout.autocomplete.js"></script>
       <script type="text/javascript" src="main.js"></script>
