--- a/examples/index.html
+++ b/examples/index.html
@@ -20,9 +20,12 @@
           <h2>Multi Completion</h2>
           <div data-bind="with: multiComplete">
               <span class="label">C# keywords:</span>
-              <div class="completion" data-bind="click: focusInput()">
+              <div class="completion" data-bind="click: focusInput">
                   <!-- ko foreach: completed -->
-                  <span data-bind="text: $data"></span>,
+                  <span class="item">
+                      <span class="label" data-bind="text: $data"></span>
+                      <a class="remove" data-bind="click: function () { $parent.removeItem($index()) }"></a>
+                  </span>
                   <!-- /ko -->
                   <input data-bind="attr: { size: Math.max(1, value().length - 1) }, hasfocus: focused, value: value, valueUpdate: 'afterkeydown', event: { keydown: keyDown }, autocomplete: { data: items, onSelect: select }" value=""/>
               </div>
