using maxItems options in example

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,7 +15,7 @@
           <h2>Single Completion</h2>
           <div data-bind="with: singleComplete">
               <span class="label">C# keywords:</span>
-              <input data-bind="autocomplete: { data: items }" value=""/>
+              <input data-bind="autocomplete: { data: items, maxItems: 6 }" value=""/>
           </div>
           <h2>Multi Completion</h2>
           <div data-bind="with: multiComplete">
