Moved MultiCompleteModel to separate file

--- a/examples/index.html
+++ b/examples/index.html
@@ -34,6 +34,7 @@
       <script type="text/javascript" src="../vendor/jquery-1.8.1.js"></script>
       <script type="text/javascript" src="../vendor/knockout-2.2.0.debug.js"></script>
       <script type="text/javascript" src="../lib/knockout.autocomplete.js"></script>
+      <script type="text/javascript" src="MultiCompleteModel.js"></script>
       <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
