--- a/examples/index.html
+++ b/examples/index.html
@@ -20,7 +20,7 @@
           <h2>Time selector</h2>
           <div>
               <span class="label">Times:</span>
-              <input data-bind="autocomplete: { data: timeData, query: timeQuery, noFilter: true, minLength: 0 }" value=""/>
+              <input data-bind="autocomplete: { data: timeData, query: timeQuery, noFilter: true, minLength: 0, className: 'time-dropdown' }" class="time-input" value=""/>
           </div>
           <h2>Levenshtein Completion</h2>
           <div>
