--- a/examples/index.html
+++ b/examples/index.html
@@ -49,6 +49,13 @@
               <b><span data-bind="text: flashWord"></span></b>
               <div id="targetSuggestions"></div>
           </div>
+          <h2>After input element to contain dropdown</h2>
+          <div>
+              <span class="label">C# keywords</span>
+              <div class="after-container">
+                <input data-bind="autocomplete: { data: keywords, maxItems: 6, after: true }" value=""/>
+              </div>
+          </div>
       </div>
       <script type="text/javascript" src="../vendor/jquery-1.8.1.js"></script>
       <script type="text/javascript" src="../vendor/knockout-2.2.0.debug.js"></script>
