--- a/examples/index.html
+++ b/examples/index.html
@@ -57,8 +57,8 @@
               </div>
           </div>
       </div>
-      <script type="text/javascript" src="../vendor/jquery-1.8.1.js"></script>
-      <script type="text/javascript" src="../vendor/knockout-2.2.0.debug.js"></script>
+      <script type="text/javascript" src="../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
+      <script type="text/javascript" src="../node_modules/jquery/dist/jquery.js"></script>
       <script type="text/javascript" src="../lib/knockout.autocomplete.js"></script>
       <script type="text/javascript" src="../vendor/levenshtein.js"></script>
       <script type="text/javascript" src="knockout.keys.js"></script>
