--- a/test/index.html
+++ b/test/index.html
@@ -23,8 +23,8 @@
     <!-- Test elements -->
 
     <script src="../node_modules/mocha/mocha.js"></script>
-    <script src="../vendor/knockout-2.2.0.debug.js"></script>
-    <script src="../vendor/jquery-1.8.1.js"></script>
+    <script src="../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
     <script src="../node_modules/unexpected/unexpected.js"></script>
     <script src="../node_modules/unexpected-dom/unexpected-dom.js"></script>
     <script src="../lib/knockout.autocomplete.js"></script>
